# harborsim

./: README.md
backend/: .gitignore  README.md  auth.py  create_admin.py  main.py  pyproject.toml  schemas.py
backend/api/v1/: login.py  users.py
backend/core/: config.py
backend/db/: database.py
backend/models/: user.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: Alerts.css  Alerts.tsx  App.css  App.tsx  CommInputNode.tsx  ConfigurationView.css  ConfigurationView.tsx  DeviceSignalCard.css  DeviceSignalCard.tsx  HealthStatus.css  HealthStatus.tsx  Login.tsx  MonitorNode.tsx  MonitoringView.css  MonitoringView.tsx  Navbar.css  Navbar.tsx  ReadoutCard.tsx  Sidebar.css  Sidebar.tsx  SimulatorNode.tsx  SpinCog.tsx  Status.tsx  StatusIndicator.tsx  VfdButton.tsx  VfdDashboard.tsx  index.css
simulator/: CMakeLists.txt  README.md
simulator/test/: CMakeLists.txt
simulator/test/tests/: main.test.cpp
